fixed layout issues with ::after

--- a/css/main.css
+++ b/css/main.css
@@ -32,18 +32,52 @@ input[type="radio"] {
 
 /* STYLE THE SPIRALGRAM */
 
-.spiralComponent#masterSVG { 
-  width: 65%;
-  height: 0;
-  padding-bottom: 65%;
+#spiralLayoutContainer { 
+
+  width: 100%;
+  display: inline-block;
+  position: relative;
+  background-color: blue;
+
+}
+
+#spiralLayoutContainer::after { 
+
+  padding-top: 60%;
+  display: block;
+  content: '';
+  
+}
+
+#innerSpiralLayoutContainer { 
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: red;
+
+}
+
+#spiralContainer { 
+  background-color: blue;
+  width: 60%;
+  height: 100%;
   display: inline-block;
 }
 
-.spiralComponent#staff { 
-  width: 35%;
-  height: 0;
-  padding-bottom: 65%;
+#staffContainer { 
+  background-color: orange;
+  width: 40%;
+  height: 100%;
   display: inline-block;
+}
+
+#spiralElement, #staffElement { 
+  border: 2px black solid;
+  width: 100%;
+  height: 100%;
 }
 
 /* STYLE THE GLYPHPLOT */
@@ -137,8 +171,7 @@ span#overview {
 #graphics span { 
     display: block;
     color: white;
-        padding-left: 5px;
-
+    padding-left: 5px;
 }
 
 #graphics {
@@ -146,20 +179,6 @@ span#overview {
     margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
-}
-
-#masterSVG { 
-	background: #22262d;
-    width: 100%;
-    height: 400px;
-    display: block;
-/*    height: 200px;
-*/}
-
-#detailSVG { 
-    margin-top: 20px;
-/*    border: 2px solid white;
-*/    height: 600px;
 }
 
 path:not(.domain) {
